修改环境更新接口，使用id更新
